--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -1,40 +1,80 @@
 /* GERAL*/
 
-body{
-    background-color: #eef0f1;
+body {
+  background-color: #eef0f1;
 }
 
 /* HEADER */
 
-header{
-    background-color: #6610bd;
-    width: 100%;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 6px 0;
-    font-size: 1.3rem;
+header {
+  background-color: #6610bd;
+  width: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 6px 0;
+  font-size: 1.3rem;
 
-    .menu{
-        ul{
-            display: flex;
-            li{
-                margin: 0 15px;
-                a{
-                    color: #FFF;
-                    &:hover{
-                        opacity: 1;
-                        border-bottom: solid 2.5px #f5f5f5;
-                    }
-                }
-            }
+  .menu {
+    ul {
+      display: flex;
+      li {
+        margin: 0 15px;
+        a {
+          color: #fff;
+          &:hover {
+            opacity: 1;
+            border-bottom: solid 2.5px #f5f5f5;
+          }
         }
+      }
     }
+  }
 
-    .logo-heart{
-        height: 90px;
-        width: 280px;
+  .logo-heart {
+    height: 90px;
+    width: 280px;
+  }
+}
+
+/* HERO */
+
+.hero {
+  background: linear-gradient(to right, rgb(92, 22, 161), rgb(95, 12, 179));
+  background-size: cover;
+  min-height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+
+  img {
+    height: 70px;
+    width: 70px;
+  }
+
+  h3 {
+    font-size: 1.1rem;
+    letter-spacing: 2px;
+    text-align: center;
+    margin-bottom: 30px;
+  }
+
+  a {
+    background: transparent;
+    color: #fff;
+    border: solid 2px #fff;
+    border-radius: 40px;
+    margin-bottom: 50px;
+    padding: 0.5rem 1rem;
+    font-size: 1.25rem;
+
+    &:hover{
+        background-color: #c9c9c9;
+        color: #000;
     }
+  }
 }
