--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -5,10 +5,8 @@ body {
 
 /* HEADER */
 header {
-  background-color: #6610bd;
+  background-color: #6420a7;
   width: 100%;
-  top: 0;
-  left: 0;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -66,6 +64,63 @@ header .logo-heart {
 .hero a:hover {
   background-color: #c9c9c9;
   color: #000;
+}
+
+/* CALCULADORA */
+.calculator {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px 100px;
+}
+.calculator .grid {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+.calculator .grid li {
+  background-color: #fff;
+  border: solid 2px #a1a1a1;
+  padding: 40px 20px;
+  margin: 0 8px 20px 0;
+  border-radius: 4px;
+  justify-content: center;
+}
+.calculator .grid li h4 {
+  text-align: center;
+  padding-bottom: 10px;
+}
+.calculator .grid li p {
+  text-align: justify;
+}
+.calculator .grid li.grid-one, .calculator .grid li.grid-two {
+  flex-basis: 48%;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+}
+
+.icon {
+  color: #6420a7;
+  font-size: 2rem;
+  padding: 3px;
+}
+
+input {
+  border: none;
+  border-bottom: 2px solid #5d5d5d;
+  padding: 5px;
+  color: #6420a7;
+  letter-spacing: 2px;
+  text-align: center;
+}
+
+input:focus {
+  border: none;
+  border-bottom: 2px solid #6420a7;
+  outline: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
