--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -51,9 +51,9 @@ header .logo-heart {
   font-size: 1.1rem;
   letter-spacing: 2px;
   text-align: center;
-  margin-bottom: 30px;
+  margin: 30px;
 }
-.hero a {
+.hero .btn {
   background: transparent;
   color: #fff;
   border: solid 2px #fff;
@@ -62,7 +62,11 @@ header .logo-heart {
   padding: 0.5rem 1rem;
   font-size: 1.25rem;
 }
-.hero a:hover {
+.hero .btn:focus {
+  outline: none;
+  box-shadow: none;
+}
+.hero .btn:hover {
   background-color: #c9c9c9;
   color: #000;
 }
@@ -171,6 +175,31 @@ footer a {
 }
 footer a:hover {
   color: #8743cc;
+}
+
+/* ===== MEDIA QUERY ==== */
+@media (max-width: 800px) {
+  header {
+    flex-direction: column;
+  }
+
+  .hero img {
+    margin-top: 20px;
+    height: 50px;
+    width: 50px;
+  }
+  .hero h1 {
+    font-size: 2.2rem;
+  }
+  .hero h3 {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 742px) {
+  .calculator .grid {
+    flex-wrap: nowrap;
+    flex-direction: column;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
