--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -56,10 +56,10 @@ header {
     font-size: 1.1rem;
     letter-spacing: 2px;
     text-align: center;
-    margin-bottom: 30px;
+    margin: 30px;
   }
 
-  a {
+  .btn {
     background: transparent;
     color: #fff;
     border: solid 2px #fff;
@@ -67,6 +67,11 @@ header {
     margin-bottom: 50px;
     padding: 0.5rem 1rem;
     font-size: 1.25rem;
+
+    &:focus {
+      outline: none;
+      box-shadow: none;
+    }
 
     &:hover {
       background-color: #c9c9c9;
@@ -187,6 +192,38 @@ footer {
 
     &:hover {
       color: #8743cc;
+    }
+  }
+}
+
+/* ===== MEDIA QUERY ==== */
+@media (max-width: 800px) {
+  header {
+    flex-direction: column;
+  }
+
+  .hero {
+    img {
+      margin-top: 20px;
+      height: 50px;
+      width: 50px;
+    }
+
+    h1 {
+      font-size: 2.2rem;
+    }
+
+    h3 {
+      font-size: 1rem;
+    }
+  }
+}
+
+@media (max-width: 742px) {
+  .calculator {
+    .grid{
+      flex-wrap: nowrap;
+      flex-direction: column;
     }
   }
 }
